fix: alignment correction of resolve and cancel button

--- a/src/app/pages/view-requests/view-requests.page.scss
+++ b/src/app/pages/view-requests/view-requests.page.scss
@@ -21,3 +21,5 @@
 div {
   background-color: #efefef;
 }
+
+ion-icon { zoom: 2 }
